[package]

name = "webdriver"
version = "0.17.0"
authors = ["Mozilla Tools and Automation <auto-tools@mozilla.com>"]
description = "Library implementing the wire protocol for the W3C WebDriver specification."
repository = "https://github.com/jgraham/webdriver-rust"
license = "MPL-2.0"

[dependencies]
cookie = {version = "0.2", default-features = false}
hyper = {version = "0.9", default-features = false}
lazy_static = "0.2"
log = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
time = "0.1"
url = "1.0"
